27Oct10=======================================================================
1. fix chat problem introduced in the last update
25Oct10=======================================================================
1. Drop PC12s purporting to originate at nodes that do PC9x (suggestion from
Lee VE1CC).
2. Increase default dup age for announces from 5 -> 18 hours.
3. add CTY 2009 cty.dat data.
4. Stop downgrading and sending CHAT messages on PC12 groups as it appears
that this is yet another "standard" that isn't universally understood.
23Oct10=======================================================================
1. add dbexport command to allow the export of ak1a style databases to a
file.
2. add dxqsl_import and dxqsl_export commands to allow the import and export
of sh/dxsql qsl manager data extracted from spots as they pass through.
04Oct10=======================================================================
1. add CTY-2007 prefix list
04Oct10=======================================================================
1. incorporated the major prefix release CTY-2006 from Jim AD1C
17Jun10=======================================================================
1. Add ip address to dxspots and default to PC61 output to dxspider nodes.
2. Allow 4 letter callsign portions again.
16Jun10=======================================================================
1. Increase default ephemeral dupe time for PC41 and such like lines.
2. Include CTY-2004 updates.
08Apr10=======================================================================
1. Modify console.pl so that it works in a Windows Cmd window. Get a Windows
Curses ppd from: http://cpan.uwinnipeg.ca/dist/Curses.
18Mar10=======================================================================
1. Make privilege 0 "stick" if set on nodes
13Mar10=======================================================================
1. try to fix AGW crashes caused by peerhost looking at the wrong thing.
2. Add more ax25 fixes for peerhost