@@ -11,7 +11,7 @@ use vars qw($version $subversion $build $gitversion);
 
 $version = '1.55';
 $subversion = '0';
-$build = '80';
-$gitversion = 'fc55b5f';
+$build = '81';
+$gitversion = '67e8ed5';
 
 1;
